# rebel

./: Cargo.toml  NEXT_FEATURES.md  README.md  SESSION.md  myapp.conf  test.sh
docs/00_concept/: BASHFX-v2.md  BASHFX.v1.10.md  micro_saas_prd.md  rsb_example.rs  rsb_pattern_guide.md
docs/01_impl/: rsb-advanced-patterns.md  rsb-completion-roadmap.md  rsb-final-completion.md
docs/archive/00_concept/: rsb_framework.rs  session_summary.md
docs/archive/01_impl/: rsb-bash-porting-library.md  rsb-legendary-patterns.md  rsb-spec-gaps-analysis.md
docs/ref/: rebel.md  rsb-architecture.md
docs/reference/: rsb-reference.md
docs/rfcs/: PAINTBOX-RFC.md
docs/tactical/: egg.10.rsb-api-usage-examples-reference.txt  egg.6.rsb-core-principles-philosophy.txt  egg.7.rsb-architecture-patterns-implementation.txt  egg.8.rsb-compliance-validation-requirements.txt  egg.9.rsb-integration-patterns-rust-projects.txt
examples/: saas_app.rs  saas_dashboard.rs  showcase.rs
port/: func.rs
port/func/: func.sh
src/: args.rs  auth.rs  context.rs  db.rs  deps.rs  fs.rs  lib.rs  macros.rs  math.rs  os.rs  preamble.rs  prelude.rs  random.rs  streams.rs  time.rs  utils.rs  web.rs
src/macros/: control_validation.rs  core.rs  dispatch.rs  fs_data.rs  io_output.rs  jobs_events.rs  json_dict_random.rs  mod.rs  routing.rs  text.rs  time_math.rs
src/ref/: boxes.rs  extended_colors.rs  text_styles.rs  width_plugin.rs
src/streamable/: functions.rs  mod.rs  original.rs  traits.rs
src/xcls/: mod.rs  xsed.rs
tests/: cli.rs  new_features.rs  saas.rs
