[package]
name = "rsb"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
regex = "1.10.2"
libc = "0.2.153"
chrono = "0.4.31"
glob = "0.3.1"
rand = "0.8.5"
rusqlite = { version = "0.31.0", features = ["bundled"] }
tiny_http = "0.12.0"
jsonwebtoken = "9.2.0"
bcrypt = "0.15.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num_cpus = "1.16.0"
whoami = "1.5.1"
dirs = "5.0.1"
which = "6.0.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
assert_fs = "1.0"
ureq = { version = "2.9.6", features = ["json"] }
