[package]
name = "rsb"
version = "2.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
regex = "1.10.2"
libc = "0.2.153"
chrono = "0.4.31"
glob = "0.3.1"
rand = "0.9.2"
uuid = { version = "1.17.0", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
assert_fs = "1.0"

[lib]
name = "rsb"
path = "src/lib.rs"
